--- a/i18n/confirmemail/pt-br.json
+++ b/i18n/confirmemail/pt-br.json
@@ -18,5 +18,11 @@
 	"growthexperiments-signupcampaign-body": "Editar a Wikipédia pode ser tão simples quanto adicionar um link ou alterar uma palavra. Obtenha sugestões para artigos em {{GENDER:|seus}} tópicos de interesse depois de criar sua conta!",
 	"growthexperiments-signupcampaign-bullet1": "Artigos sugeridos em {{GENDER:|seus interesses}}",
 	"growthexperiments-signupcampaign-bullet2": "Peça ajuda de um editor experiente",
-	"growthexperiments-signupcampaign-bullet3": "Comece com edições pequenas e fáceis"
+	"growthexperiments-signupcampaign-bullet3": "Comece com edições pequenas e fáceis",
+	"growthexperiments-thankyoupage-title": "Crie uma conta para começar a editar e melhorar a Wikipédia.",
+	"growthexperiments-thankyoupage-body": "A Wikipédia é construída por pessoas como {{GENDER:|você}} trabalhando juntas. Editar um artigo é mais fácil do que {{GENDER:|você}} imagina!",
+	"growthexperiments-thankyoupage-bullet1": "Tarefas simples que correspondem aos {{GENDER:|seus}} interesses",
+	"growthexperiments-thankyoupage-bullet2": "Ajuda e orientação à medida que {{GENDER:|você}} edita",
+	"growthexperiments-thankyoupage-bullet3": "Insights sobre quantas pessoas veem {{GENDER:|seu}} trabalho",
+	"growthexperiments-campaigns-footer": "Ao criar {{GENDER:|sua}} conta nesta página, ela será associada a esta campanha para fins de experiência e análise."
 }
