--- a/i18n/confirmemail/qqq.json
+++ b/i18n/confirmemail/qqq.json
@@ -30,5 +30,11 @@
 	"growthexperiments-josacampaign-body": "{{Notranslate}}\nThis is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBody of the Special:CreateAccount block that is shown during the JOSA signup event.",
 	"growthexperiments-glamcampaign-title": "{{Notranslate}}\nThis is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nTitle of the Special:CreateAccount block that is shown during the GLAM events in Latin America.",
 	"growthexperiments-glamcampaign-body": "{{Notranslate}}\nThis is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBody of the Special:CreateAccount block that is shown during the GLAM events in Latin America.",
+	"growthexperiments-thankyoupage-title": "This is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nTitle of the Special:CreateAccount block that is shown during the Thank You page campaign.",
+	"growthexperiments-thankyoupage-body": "This is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBody of the Special:CreateAccount block that is shown during the Thank You page campaign.",
+	"growthexperiments-thankyoupage-body-mobile": "This is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBody for mobile of the Special:CreateAccount block that is shown during the Thank You page campaign",
+	"growthexperiments-thankyoupage-bullet1": "This is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBenefit item 1 of the Special:CreateAccount block that is shown during the Thank You page campaign",
+	"growthexperiments-thankyoupage-bullet2": "This is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBenefit item 2 of the Special:CreateAccount block that is shown during the Thank You page campaign",
+	"growthexperiments-thankyoupage-bullet3": "This is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBenefit item 3 of the Special:CreateAccount block that is shown during the Thank You page campaign",
 	"growthexperiments-campaigns-footer": "Legal notice shown for custom campaign signup pages."
 }
