Community configuration: Indicate when changes are not immediate
Warn the user that for some Add Link settings, changes aren't
immediately reflected on the site (they affect task generation,
not task display).

Bug: T307496
Change-Id: I92b547c8ac8a814de82ba5d06fb1039102311eb4

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -81,5 +81,6 @@
 	"growthexperiments-edit-config-newcomer-tasks-excluded-templates": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
 	"growthexperiments-edit-config-newcomer-tasks-excluded-categories": "Articles containing categories defined here will not be shown to users as tasks for this task type.",
 	"growthexperiments-edit-config-newcomer-tasks-infobox-templates": "Infobox templates",
-	"growthexperiments-edit-config-newcomer-tasks-infobox-templates-help": "These templates are needed for the [[mw:Growth/Personalized_first_day/Structured_tasks/Add_an_image|image suggestions]] newcomer task feature. Articles containing these templates will not be listed as image suggestion tasks."
+	"growthexperiments-edit-config-newcomer-tasks-infobox-templates-help": "These templates are needed for the [[mw:Growth/Personalized_first_day/Structured_tasks/Add_an_image|image suggestions]] newcomer task feature. Articles containing these templates will not be listed as image suggestion tasks.",
+	"growthexperiments-edit-config-delayed": "Changes to this setting won't take effect immediately (see [[mw:Growth/FAQ#add-link-config|FAQ]])."
 }
