--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -92,5 +92,6 @@
 	"growthexperiments-edit-config-newcomer-tasks-excluded-templates": "Description of the excluded templates form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-excluded-categories": "Description of the excluded categories form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-infobox-templates": "Description of the infobox templates form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
-	"growthexperiments-edit-config-newcomer-tasks-infobox-templates-help": "Help text for infobox templates form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}"
+	"growthexperiments-edit-config-newcomer-tasks-infobox-templates-help": "Help text for infobox templates form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-delayed": "Help text for Special:EditGrowthConfig fields for which changes have a delayed effect due to caching or similar.\n\n{{doc-growthexperiments-community-configuration}}"
 }
