Move help panel preference toggle to user profile section
* Update the subection title to "Newcomer editor features"
* Update the link target for disabling the help panel in HelpPanelProcessDialog

Bug: T284088
Change-Id: Ic8e41619762c07ede6cce0b9de9d9dd492573b53

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -5,7 +5,7 @@
 	"growthexperiments-homepage-specialpage-title": "{{GENDER:$1|Hello}}, {{bidi:$1}}!",
 	"growthexperiments-homepage-tab": "Homepage",
 	"tooltip-pt-homepage": "{{GENDER:|Your}} homepage",
-	"prefs-homepage": "Newcomer homepage",
+	"prefs-homepage": "Newcomer editor features",
 	"growthexperiments-homepage-enable": "Display newcomer homepage",
 	"growthexperiments-homepage-pt-link": "Default to newcomer homepage from username link in personal tools",
 	"growthexperiments-homepage-email-header-noemail": "Add {{GENDER:$1|your}} email",
@@ -138,7 +138,7 @@
 	"growthexperiments-specialimpact-invalid-username": "Missing or invalid username.",
 	"growthexperiments-homepage-claimmentee-no-user": "Mentee doesn't exist",
 	"growthexperiments-homepage-claimmentee-already-mentor": "{{GENDER:$2|You}} already mentor {{GENDER:$1|$1}}",
-	"growthexperiments-homepage-enable-preference": "To enable the newcomer homepage, visit your \"Newcomer homepage\" settings in [[Special:Preferences#mw-prefsection-personal-homepage|Preferences]].",
+	"growthexperiments-homepage-enable-preference": "To enable the newcomer homepage, visit your \"Newcomer editor features\" settings in [[Special:Preferences#mw-prefsection-personal-homepage|Preferences]].",
 	"growthexperiments-homepage-contributions-zero-title": "{{GENDER:$1|You}} have not yet made any contributions.",
 	"growthexperiments-homepage-contributions-zero-subtitle": "Visit {{GENDER:$1|your}} homepage to get started with editing!",
 	"growthexperiments-homepage-contributions-zero-button": "Go to {{GENDER:$1|your}} homepage",
