Mentorship: add gender support to growthexperiments-homepage-mentorship-about-mentor-par1 and -par2
Bug: T309073
Change-Id: I40797bfeee5cbf8faf278b81ebfd413fd4171cec

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -511,8 +511,8 @@
 	"growthexperiments-homepage-mentorship-optout-confirmation-done": "Done",
 	"growthexperiments-homepage-mentorship-about-header": "About mentors",
 	"growthexperiments-homepage-mentorship-about-subheader-mentor": "Who is {{GENDER:|your}} mentor?",
-	"growthexperiments-homepage-mentorship-about-mentor-par1": "{{GENDER:|Your}} mentor is another person with a lot of experience editing on {{SITENAME}}. They’ve volunteered to guide newer people like you on how to edit, and can answer questions {{GENDER:|you}} may have about using the site.",
-	"growthexperiments-homepage-mentorship-about-mentor-par2": "When {{GENDER:|you}} send a message to your mentor, they will see it on their user talk page and {{GENDER:|you}} should receive a notification when they reply.",
+	"growthexperiments-homepage-mentorship-about-mentor-par1": "{{GENDER:|Your}} {{GENDER:$1|mentor}} is another person with a lot of experience editing on {{SITENAME}}. {{GENDER:$1|He’s|She’s|They’ve}} volunteered to guide newer people like you on how to edit, and can answer questions {{GENDER:|you}} may have about using the site.",
+	"growthexperiments-homepage-mentorship-about-mentor-par2": "When {{GENDER:|you}} send a message to your mentor, {{GENDER:$1|he|she|they}} will see it on {{GENDER:$1|his|her|their}} user talk page and {{GENDER:|you}} should receive a notification when {{GENDER:$1|he replies|she replies|they reply}}.",
 	"growthexperiments-homepage-mentorship-about-subheader-optout": "Opt out of mentorship",
 	"growthexperiments-homepage-mentorship-about-optout-par1": "Select the button below to opt out if {{GENDER:|you}} prefer not to have a specific mentor assigned to {{GENDER:|you}} right now. {{GENDER:|You}} can get a new mentor again at any time if {{GENDER:|you}} change {{GENDER:|your}} mind.",
 	"growthexperiments-homepage-mentorship-about-done": "Done"
