--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -83,6 +83,7 @@
 	"growthexperiments-edit-config-newcomer-tasks-update-learnmore": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-learnmore": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-maximum-links-to-show": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-maximum-tasks-per-day": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-excluded-sections": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-image-recommendation-learnmore": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-machine-suggestions-no-templates": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
