--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -76,6 +76,7 @@
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-maximum-tasks-per-day": "The maximum number of \"Add a link\" suggested tasks a newcomer can complete daily.",
 	"growthexperiments-edit-config-newcomer-tasks-link-recommendation-excluded-sections": "The list of section names in which no links should be recommended.",
 	"growthexperiments-edit-config-newcomer-tasks-image-recommendation-learnmore": "Destination page for learning more about image recommendation task type.",
+	"growthexperiments-edit-config-newcomer-tasks-image-recommendation-maximum-tasks-per-day": "The maximum number of \"Add an image\" suggested tasks a newcomer can complete daily.",
 	"growthexperiments-edit-config-newcomer-tasks-machine-suggestions-no-templates": "This task type is associated with machine suggestions, and does not use templates to generate a pool of tasks.",
 	"growthexperiments-edit-config-newcomer-tasks-excluded-templates": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
 	"growthexperiments-edit-config-newcomer-tasks-excluded-categories": "Articles containing categories defined here will not be shown to users as tasks for this task type.",
