MentorTools: Make it possible for mentors to change their intro message
This should be only visible to users when GEMentorProvider is structured,
because it depends on an API that only works with structured providers.

Bug: T264343
Change-Id: Ibd63bfa2805c204a5e51599eec52aa5329b2f217

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -90,6 +90,11 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-changed": "{{GENDER:|Your}} load was changed to \"$1\".",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-info-text-line1": "Mentees are assigned randomly to mentors as their accounts are created.  You can manage how many mentees are assigned to you, but some mentees may ask questions more frequently than others",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-info-text-line2": "It’s recommended to start on the “Average” setting to gauge your support capacity before increasing or decreasing.",
+	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-title": "Change {{GENDER:|your}} introduction message",
+	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-save": "Save",
+	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-cancel": "Cancel",
+	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-message-label": "Introduction message",
+	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-success": "{{GENDER:|Your}} introduction message was changed to \"$1\".",
 	"growthexperiments-mentor-list-missing-key": "Key <code>$1</code> is missing",
 	"growthexperiments-mentor-list-datatype-mismatch": "<code>$1</code> is expected to be <code>$2</code>, but is <code>$3</code>",
 	"growthexperiments-mentor-list-unexpected-key-mentor": "Mentor definition contains an unexpected key <code>$1</code>",
