--- a/i18n/newcomertasks/api/en.json
+++ b/i18n/newcomertasks/api/en.json
@@ -17,5 +17,6 @@
 	"apierror-growthexperiments-addimage-handler-reason-wrongtype": "'reason' parameter must be an array in Add Image plugin data, is $1",
 	"apierror-growthexperiments-addimage-handler-reason-invaliditem": "Invalid item '$1' for 'reason' parameter, must be one of: $2",
 	"apierror-growthexperiments-addlink-handler-notfound": "Link recommendation record not found",
-	"apierror-growthexperiments-addlink-handler-wrongtargets": "Unexpected link recommendation targets: $1"
+	"apierror-growthexperiments-addlink-handler-wrongtargets": "Unexpected link recommendation targets: $1",
+	"growthexperiments-underlinked-rescore-profile": "Internal rescore profile used in GrowthExperiments link recommendations for prioritizing articles which do not yet have enough links."
 }
