--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -48,7 +48,7 @@
 	"growthexperiments-edit-config-help-panel-links-articlewizard-title": "5) Destination page for fifth help panel link (recommended: article wizard)",
 	"growthexperiments-edit-config-help-panel-links-articlewizard-label": "5) Label of fifth help panel link (recommended: \"How to create an article\")",
 	"growthexperiments-edit-config-homepage": "Newcomer homepage",
-	"growthexperiments-edit-config-homepage-intro-links-create": "Destination page for a link about how create a new article",
+	"growthexperiments-edit-config-homepage-intro-links-create": "Destination page for a link about creating a new article",
 	"growthexperiments-edit-config-homepage-intro-links-image": "Destination page for a link about how to add images in the visual editor",
 	"growthexperiments-edit-config-mentorship": "Mentorship",
 	"growthexperiments-edit-config-mentorship-description": "Wikis can have two separate mentor lists: one for mentors that get randomly assigned to all newcomers, and another for mentors that do not get randomly assigned, but can claim mentees. This second list is used for mentors that only want to be mentors to people from events or classes.",
