ApiManageMentorList: Empty message should mean default
The current API doesn't make it possible for mentors
to switch to their default message. Null (used by the Mentor
value object) is not usable, because it is interpreted
as "do not change". As it does not make sense to use
an empty custom message, let's use it to mean
"use the default mentor message".

Bug: T264343
Change-Id: I7086e9ed38fe623a69a9c85dab8be997f0547789

--- a/i18n/mentorship/api/en.json
+++ b/i18n/mentorship/api/en.json
@@ -23,7 +23,7 @@
 	"apihelp-query+growthmentormentee-param-gemmmentor": "Mentor to query mentees for",
 	"apihelp-growthmanagementorlist-summary": "Manage information in the structured mentor list (usually stored in [[MediaWiki:GrowthMentors.json]]). This module can be used by both current and future mentors (to add themselves or change their details) and administrators (for all users).",
 	"apihelp-growthmanagementorlist-param-geaction": "Action",
-	"apihelp-growthmanagementorlist-param-message": "Introduction message",
+	"apihelp-growthmanagementorlist-param-message": "Introduction message (use an empty string for the default mentor message)",
 	"apihelp-growthmanagementorlist-param-weight": "Weight",
 	"apihelp-growthmanagementorlist-param-autoassigned": "Is the mentor automatically assigned to newcomers?",
 	"apihelp-growthmanagementorlist-param-summary": "Reason for the change",
